bk_ida/gccida/g0/hash_scan_set
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/hash_scan_set/src/gcse.c:2644:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
src = ( rtx)pat[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/hash_scan_set/src/gcse.c:2686:7: error: use of undeclared identifier 'std'
if ( !std::allocator_traits<std::allocator<std::_Rb_tree_node<std::pair<std::string const, tcmalloc::MallocExtension::Property>>>>::allocate( 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/hash_scan_set/src/gcse.c:2705:30: error: use of undeclared identifier 'machine_mode'
insert_expr_in_table( src, ( machine_mode)*( ( unsigned __int8 *)dest + 2), insn, antic_p, v4); 
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/hash_scan_set/src/obj/gcse.o] Error 1
